--- a/src/WixToolset.WixBA/RootView.xaml
+++ b/src/WixToolset.WixBA/RootView.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright (c) .NET Foundation and contributors. All rights reserved. Licensed under the Microsoft Reciprocal License. See LICENSE.TXT file in the project root for full license information. -->
 
-<Window x:Class="WixToolset.UX.RootView"
+<Window x:Class="WixToolset.WixBA.RootView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ux="clr-namespace:WixToolset.UX"
+        xmlns:wixba="clr-namespace:WixToolset.WixBA"
         MinWidth="550"
         MinHeight="400"
         Width="750"
@@ -402,7 +402,7 @@
                     </Grid>
 
                     <WebBrowser DockPanel.Dock="Bottom"
-                                ux:BrowserProperties.HtmlDoc="{Binding UpdateChanges}" />
+                                wixba:BrowserProperties.HtmlDoc="{Binding UpdateChanges}" />
                 </DockPanel>
 
                 <TextBlock x:Name="DowngradeMessageTextBlk"
